# gold-fund-quotes_bot

./: .env.dist  .gitignore  README.md  app.py  loader.py  pyproject.toml  requirements.txt
config/: secrets.py
data/: config.py
data/config/: config.py
hadlers/users/: __init__.py  add_quote.py  common.py  edit_quote.py  get_quote.py  get_quotes.py  get_tags.py  help.py
handlers/: __init__.py
handlers/common/: __init__.py  cancel.py
handlers/users/: __init__.py  add_quote.py  get_quotes.py  help.py  start.py
handlers/users/quote/: __init__.py  add.py  edit.py  get_quotes.py  menu.py
handlers/users/tags/: __init__.py  menu.py
keyboards/buttons/: navigate_buttons.py  quote_buttons.py  tag_buttons.py
keyboards/inline/: callback_data.py  callback_factories.py  confirm_add_quote.py  edit_quote_keyboard.py  pagination.py  quote_keyboards.py  quote_menu.py  tag_keyboards.py  tag_menu.py
middlewares/: __init__.py  limit_quotes.py  on_startup.py  throttling.py
responses/: help.py  start.py
src/: app.py  loader.py
src/filters/: is_quote.py
src/handlers/common/: cancel.py
src/handlers/users/: __init__.py  help.py  start.py
src/keyboards/buttons/: navigate_buttons.py  (+2 more)
src/middlewares/: limit_quotes.py  on_startup.py
src/responses/: help.py  quote.py  start.py  tag.py
src/utils/: quote.py
states/: add_quote.py  order_quote.py  quote.py  quote_states.py
utils/: __init__.py  messages.py  quote.py  set_default_commands.py
utils/db_api/: __init__.py  base.py  engine.py  on_startup.py  queries.py  schemas.py
utils/misc/: message_worker.py
(+20 files in other folders)
