[tool.poetry]
name = "gold_fund_quotes"
version = "0.1.0"
description = ""
authors = ["altcode <cosmosx1328@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
python-dotenv = "^0.19.2"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
