[tool.poetry]
name = "gold-fund-quotes-bot"
version = "0.1.0"
description = ""
authors = ["altroncode <cosmosx1328@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
aiogram = "^2.21"
SQLAlchemy = "^1.4.31"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
